# gptme

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUG.md  Makefile  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  gptme.toml  index.html  jest.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.test.json  vite.config.prod.ts  vite.config.ts
.github/: CI_TRIGGER  dependabot.yml
.github/workflows/: benchmark.yml  bot.yml  build.yml  ci.yml  demos.yml  deploy.yml  docs.yml  eval-ci.yml  eval.yml  lint.yml  optimize-prompts.yml  release.yml  resolve.yml  scheduled-release.yml  self-heal.yml  tauri.yml  test.yml  webui.yml
docs/: Makefile  acp.html  acp.rst  agents.html  agents.rst  alternatives.html  alternatives.rst  api.html  api.rst  arewetiny.html  arewetiny.rst  automation.html  bot.html  bot.md  building.html  changelog.html  changelog.rst  cli.html  cli.rst  commands.html  commands.rst  computer-use-warning.html  concepts.html  concepts.rst  conf.py  config.html  config.rst  contributing.html  contributing.rst  custom-providers.html  custom-providers.md  custom_tool.html  custom_tool.rst  demos.html  demos.rst  evals.html  evals.rst  examples.html  features.html  features.rst  (+44 more)
docs/_sources/: agents.rst  alternatives.rst  automation.rst  bot.md  building.rst  cli.rst  config.rst  custom_tool.rst  evals.rst  examples.rst  features.rst  getting-started.rst  glossary.md  hooks.rst  index.rst  lessons.rst  model-routing.md  plugins.rst  projects.rst  providers.rst  security.rst  server.rst  skills.rst  timeline.rst  tools.rst  usage.rst
docs/agent/: verifier-profile.html
docs/automation/: example_activity_summary.html  example_code_review.html
docs/changelog/: v0.22.0.md  v0.23.0.md  v0.24.0.md  v0.24.1.md  v0.25.0.md  v0.26.0.md  v0.27.0.md  v0.28.0.md
docs/design/: elicitation.html  hook-based-confirmations.html  hook-based-confirmations.md
docs/howto/: automate-task.html  automate-task.md  code-review.html  code-review.md  computer-use.html  computer-use.md  debug-python.html  debug-python.md  edit-files.html  index.html  index.md  minimal-context.html  minimal-context.md  refactor.html  refactor.md
docs/lessons/: CONTRIBUTING.md  EXAMPLES.md  README.md  TESTING.md
docs/misc/: acronyms.html  server-hooks-analysis.md
docs/releases/: v0.1.1.html  v0.1.1.md  v0.10.0.html  v0.10.0.md  v0.10.1.html  v0.10.1.md  v0.10.2.html  v0.10.3.html  v0.10.3.md  v0.10.4.html  v0.10.4.md  v0.10.5.html  v0.11.0.html  v0.12.0.html  v0.13.0.html  v0.14.0.html  v0.15.0.html  v0.15.0.md  v0.16.0.html  v0.16.0.md  v0.17.0.html  v0.18.0.html  v0.19.0.html  v0.19.0.md  v0.2.1.html  v0.2.1.md  v0.2.2.html  v0.2.2.md  v0.20.0.html  v0.20.0.md  v0.21.0.html  v0.21.0.md  v0.22.0.html  v0.22.0.md  v0.23.0.html  v0.24.0.html  v0.24.1.html  v0.24.1.md  v0.25.0.html  v0.25.0.md  (+42 more)
docs/skills/: README.md
downloads/: index.html
e2e/: conversation.spec.ts
gptme/: __init__.py  __init__.pyi  __main__.py  __version__.py  attestation.py  chat.py  checkpoint.py  circuit_breaker.py  cli.py  codeblock.py  commands.py  config.py  constants.py  dirs.py  doctor.py  executor.py  hooks.py  info.py  init.py  logmanager.py  message.py  onboard.py  profiles.py  prompts.py  session.py  setup.py  telemetry.py  workspace_snapshot.py
gptme-extension/: README.md
gptme/acp/: __init__.py  __main__.py  adapter.py  agent.py  client.py  types.py
gptme/agent/: __init__.py  cli.py  doctor.py  service.py  workspace.py
gptme/cli/: __init__.py  auth.py  checkpoint.py  cmd_agents.py  cmd_attest.py  cmd_batch.py  cmd_chats.py  cmd_computer.py  cmd_hooks.py  cmd_init.py  cmd_mcp.py  cmd_resume.py  cmd_skills.py  cmd_snapshot.py  cmd_status.py  doctor.py  main.py  onboard.py  setup.py  util.py  wut.py
scripts/: Dockerfile  Dockerfile.computer  Dockerfile.github-bot  Dockerfile.selfhost  Dockerfile.server  analyze_compression.py  auto_rename_logs.py  bell_sound.py  build_changelog.py  build_server_executable.sh  bump_version.sh  changelog_contributors.csv  changelog_contributors_twitter.csv  check_poetry_lock_sync.sh  check_rst_formatting.py  convert_convo.py  demo_capture.py  describe_api.py  eval_leaderboard.py  eval_trends.py  generate_sounds.py  gh-pr-view-with-pr-comments.py  gh-pr-view-with-pr-comments.sh  github_bot.py  github_ci_self_heal.py  gpt_todoer.py  gptme-server.service  install.sh  prometheus.yml  publish_release.sh  reduce_context.py  summarize_project.py  treeofthoughts.py  tts_chatterbox.py  tts_kokoro.py  tts_server.py  verify_cloudflare_pages_deep_links.py
site/: template.html
src/: App.tsx  democonversations.ts  index.css  main.tsx  polyfills.ts
tauri/: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  entitlements.plist  gptme.toml  package-lock.json  package.json
tests/: benchmark_context_selector.py  conftest.py  test_acp_adapter.py  test_acp_agent.py  test_acp_session_runtime.py  test_acp_stdout.py  test_acp_types.py  test_agent.py  test_agent_doctor.py  test_agent_memory.py  test_agent_service_timeouts.py  test_agent_workspace_timeouts.py  test_agents_md_inject.py  test_auto_compact.py  test_auto_naming.py  test_autocompact_scoring.py  test_backtrack.py  test_browser.py  test_browser_format.py  test_browser_github_routing.py  test_browser_lynx.py  test_chat.py  test_chat_config.py  test_chat_history.py  test_chats_clean.py  test_chats_export.py  test_chats_json.py  test_chats_rename.py  test_chats_stats.py  test_checkpoint.py  test_circuit_breaker.py  test_cli.py  test_cli_confirm_hook.py  test_cli_llm_generate.py  test_cli_resume.py  test_cli_status.py  test_codeblock.py  test_command_completion.py  test_commands.py  test_commands_llm.py  (+238 more)
webui/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  bun.lockb  eslint.config.js  gptme.toml  index.html  jest.config.ts  jest.setup.ts  package-lock.json  package.json  panel.html  playwright.config.ts  prettier.config.cjs  server.py  tailwind.config.ts  tsconfig.app.json  tsconfig.test.json  vite.config.ts  wrangler.toml
(+783 files in other folders)
